--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+	<div>
+		<img class = "moviePic" src="https://images.indianexpress.com/2024/03/maidaan.jpg?w=414img_girl.jpg" alt="Movie Poster">
+		<p class = "movieDetail">Maidaan (transl. Field) is a 2024 Indian Hindi-language biographical sports drama film co-written and directed by Amit Ravindernath Sharma and produced by Akash Chawla, Arunava Joy Sengupta, Boney Kapoor and Zee Studios. Sports action by Rob Miller and ReelSports. Ajay Devgn plays the role of Syed Abdul Rahim, a pioneering football coach in India between 1952 and 1962.[5][6]
+
+The film's preview shows were released on 10 April 2024. Theatrically the film was released worldwide on 11 April 2024, coinciding with Eid.[7] Despite a positive critical reception, the film underperformed at the box office.[8]</p>
+		
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
